# llm-emotion-steering-vectors

./: .gitignore  pyproject.toml
data/contrastive_pairs/: afraid.jsonl  angry.jsonl  anxious.jsonl  bored.jsonl  calm.jsonl  confident.jsonl  curious.jsonl  depressed.jsonl  desperate.jsonl  enthusiastic.jsonl  focused.jsonl  frustrated.jsonl  happy.jsonl  hopeful.jsonl  inspired.jsonl  loving.jsonl  patient.jsonl  playful.jsonl  stubborn.jsonl  tense.jsonl
scripts/: 01_download_model.py  02_generate_pairs.py  03_train_vectors.py  04_validate_vectors.py  05_run_baseline.py  06_run_singles.py  07_run_cocktails.py  08_analyze_results.py  calibrate.py  clean_completions.py  run_pipeline.py  sanity_check.py
src/llm_pharma/: __init__.py  config.py  emotions.py  model_utils.py
src/llm_pharma/analysis/: results.py  visualization.py
src/llm_pharma/benchmark/: cocktails.py  evaluator.py  humaneval_runner.py
src/llm_pharma/validation/: activation_check.py  cosine_geometry.py  logit_lens.py
src/llm_pharma/vectors/: caa.py  registry.py
