[project]
name = "llm-pharma"
version = "0.1.0"
description = "Emotion steering vectors as LLM nootropics — testing if emotion cocktails improve coding performance"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "steering-vectors>=0.12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
gpu = [
    "flash-attn>=2.5.0",
]
sae = [
    "sae-lens>=4.0.0",
    # TransformerLens not used — no Qwen3.5 support yet.
    # SAE Lens can train SAEs directly on HuggingFace models.
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_pharma"]

[tool.ruff]
line-length = 100
